# rusterize

./: .gitignore  Cargo.toml  LICENSE  README.md  air.toml  build.sh  publish.sh  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.env/: pyvenv.cfg
.github/workflows/: CI.yml  build-wheels.sh  ci.yml  crates-publish.yml  docs.yml  pr.yml  pypi-publish.yml  test-ci.yml  test-compile.yml  testpypi-publish.yml
R/: README.md
R/rusterize/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  bootstrap.R  configure  configure.win
R/rusterize/R/: 000-wrappers.R  rusterize.r
R/rusterize/benchmarks/: benchmark.r  benchmark_rusterize.r
R/rusterize/man/: rusterize.Rd
R/rusterize/src/: .gitignore  Makevars.in  Makevars.win.in  init.c  rusterize-win.def
R/rusterize/src/rust/: Cargo.toml  api.h
R/rusterize/src/rust/src/: allocator.rs  conversion.rs  lib.rs  rusterize.rs
R/rusterize/src/rust/src/encoding/: mod.rs  rarrays.rs
R/rusterize/src/rust/src/geo/: mod.rs  parse_geometry.rs  raster.rs
R/rusterize/tests/: testthat.R
R/rusterize/tests/testthat/: helper-geoms.R  test-boundary.R  test-geometry.R  test-rasterize.R  test-validate.R
R/rusterize/tools/: savvy-update.sh
benchmarks/: benchmark_fasterize.r  benchmark_rusterize.py  run_others.py
python/: Cargo.toml  README.md  pyproject.toml  wrapper.py  zensical.toml
python/benchmarks/: benchmark_fasterize.r  benchmark_rusterize.py  run_others.py
python/docs/: api.md  contributing.md  index.md  python.md  python_api.md  r.md  r_api.md
python/python/rusterize/: __init__.py  _dependencies.py  _rusterize.pyi
python/rusterize/: __init__.py  _dependencies.py  core.py  rusterize.pyi  wrapper.py
python/src/: allocator.rs  lib.rs  prelude.rs  rusterize.rs
python/src/encoding/: pyarray.rs  xarray.rs
python/src/geo/: parse_geometry.rs  raster.rs
python/test/: test_many.py
python/test/data/: standard_output_sum_custom_shape.tif
rust/: Cargo.toml  README.md
rust/src/: error.rs  lib.rs  prelude.rs  rasterize.rs
rust/src/encoding/: arrays.rs  writers.rs
rust/src/geo/: edges.rs  raster.rs
rust/src/rasterization/: burn_geometry.rs  burners.rs  pixel_cache.rs  pixel_functions.rs
src/: allocator.rs  check_inputs.rs  edge_collection.rs  edgelist.rs  geo_validate.rs  lib.rs  pixel_functions.rs  pllib.rs  prelude.rs  rasterize.rs  rasterize_geometry.rs  rasterize_polygon.rs  rusterize_impl.rs  to_xarray.rs
src/edgelist/: edge.rs
src/encoding/: arrays.rs  build_xarray.rs  pyarrays.rs  writers.rs
src/geo/: edge.rs  edge_collection.rs  edges.rs  from_shapely.rs  geo_inputs.rs  parse_geometry.rs  raster.rs  validate.rs
src/geom/: from_geopandas.rs  from_shapely.rs  geo_validate.rs  parse_wkb.rs  to_geo_vector.rs  validate.rs
src/rasterization/: burn_geometry.rs  burners.rs  pixel_functions.rs  prepare_dataframe.rs  rasterize_geometry.rs  rusterize_impl.rs
src/structs/: edge.rs  raster.rs  xarray.rs
test/: test_many.py
test/data/: standard_output_sum.tif
