cargo-features = ["profile-rustflags"]

[package]
name = "rusterize"
version = "0.4.0"
edition = "2024"
resolver = "2"

[lib]
name = "rusterize"
crate-type = ["cdylib"]

[dependencies]
geo = "0.30.0"
geo-traits = "0.3.0"
geo-types = "0.7.17"
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = "0.2.19"
numpy = "0.25.0"
polars = { version = "0.49.1", features = ["lazy", "simd", "performant", "nightly"] }
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
pyo3-polars = "0.22.0"
rayon = "1.10.0"
wkb = "0.9.0"

# OS-specific allocators
[target.'cfg(not(target_family = "unix"))'.dependencies]
mimalloc = { version = "*", default-features = false }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "*", features = ["disable_initial_exec_tls", "background_threads"] }

[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "*", features = ["disable_initial_exec_tls"] }

[profile.dist-release]
inherits = "release"
rustflags = ["-C", "target-feature=+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+cmpxchg16b,+avx,+avx2,+fma,+bmi1,+bmi2,+lzcnt,+pclmulqdq,+movbe"]
codegen-units = 1
lto = true
