[workspace]
members = ["rust", "python"]
resolver = "3"

[workspace.package]
description = "Extremely fast geometry rasterization"
edition = "2024"
authors = ["Tommaso Trotto <tomm.y@outlook.it>"]
license = "MIT"
repository = "https://github.com/ttrotto/rusterize"
readme = "README.md"
categories = ["science::geo"]
keywords = ["fast", "raster", "geometry"]

[workspace.dependencies]
geo = "0.33.1"
geo-types = "0.7.19"
num-traits = "0.2.19"
rayon = "1.12.0"

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
