[build-system]
requires = ["maturin>=1.6,<2.0", "patchelf>=0.17"]
build-backend = "maturin"

[project]
name = "rusterize"
description = "High performance rasterization tool for Python build in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
author = {name = "Tommaso Trotto", email = "ttrotto@mail.ubc.ca"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "polars>=1.19.0",
    "xarray>=2025.1.0",
    "rioxarray>=0.18.2"
]

[tool.maturin]
python-source = "python"
module-name = "rusterize"
include = [{ path = "rust-toolchain.toml", format = "sdist" }]

[project.urls]
repository = "https://github.com/ttrotto/rusterize"