[package]
name = "rusterize-python"
description = { workspace = true }
version = "0.9.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"

[lib]
name = "_rusterize"
crate-type = ["cdylib"]

[dependencies]
rusterize = { path = "../rust", package = "rusterize-rs", features = ["polars"] }
geo = { workspace = true }
geo-traits = "0.3.0"
geo-types = { workspace = true }
num-traits = { workspace = true }
numpy = "0.28.0"
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
pyo3-polars = "0.27.0"
polars = { version = "0.54.4", default-features = false, features = ["lazy", "strings", "temporal"] }
rayon = { workspace = true }
wkb = "0.9.2"
wkt = "0.14.0"

# OS-specific allocators
[target.'cfg(not(target_family = "unix"))'.dependencies]
mimalloc = { version = "*", default-features = false }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "*", features = ["disable_initial_exec_tls", "background_threads"] }

[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "*", features = ["disable_initial_exec_tls"] }
